package statistics;

public enum StatisticValue {
    
    WIN, LOSE, DRAW

}
