package statistics;

public enum TypeGame {
    
    TicTacToe, HANGMAN

}
